# smolchess

./: CLI.cpp  CLI.h  CMakeLists.txt  README.md  board.cpp  board.h  board_helpers.cpp  board_helpers.h  cli.cpp  cli.h  engine.cpp  engine.h  eval.cpp  main.cpp  minimax.cpp  minimax.h  search.cpp  search.h  uci.cpp
assets/: k_castle.txt  kid.txt  promotion2.txt  qid.txt
assets/tests/: kk_check.txt  promotion1.txt
